<resources>
    <string name="app_name">Money Manager</string>
    <string name="app_name_caps">MONEY MANAGER</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="contact_us">Contact us</string>
    <string name="send">Send</string>
    <string name="select_default_currency">Select default currency</string>
    <string name="add_balance_on_the_main_account">Enter the balance on the main account</string>
    <string name="add_balance_on_the_main_description">You can add other accounts later in the account section</string>
    <string name="flag">flag</string>
    <string name="search">Search…</string>
    <string name="subject">Subject</string>
    <string name="message_text">Message text</string>
    <string name="email">Email</string>
    <string name="select_default_account">Select default account</string>
    <string name="format_number">Format number</string>
    <string name="reminders">Reminders</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_charts">Charts</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_regular_payments">Regular payments</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_about_us">About us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">submit</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_uploads">0, 1</string>
    <string name="icon_category">Category icon</string>
    <string name="create">Create</string>
    <string name="title_activity_tab_navigation">TabNavigationActivity</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="transfers">Transfers</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_transaction">Create transaction</string>
    <string name="name_regular_payment">Payment name</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="account">Account</string>
    <string name="reminder_start_date">Reminder start date</string>
    <string name="reminder_end_date">Reminder end date</string>
    <string name="reminder_frequency">Reminder frequency</string>
    <string name="category">Category</string>
    <string name="note">Note</string>
    <string name="name">Name</string>
    <string name="do_not_include_in_total_balance">Do not include in total balance</string>
    <string name="edit_entity_cancel_dialog_message">Exit without saving?</string>
    <string name="discard_label">Discard</string>
    <string name="cancel_label">Cancel</string>
    <string name="date">Date</string>
    <string name="photo">Photo</string>
    <string name="today">Today</string>
    <string name="others">Others</string>
    <string name="category_name">Category name</string>
    <string name="icon">Icon</string>
    <string name="color">Color</string>
    <string name="transfer_from_account">Transfer from account</string>
    <string name="transfer_fo_account">Transfer fo account</string>
    <string name="payment_name">Payment name</string>
    <string name="total">Total</string>
    <string name="main">Main</string>
    <string name="content_description_update">Update</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="income_transaction">Income transactions</string>
    <string name="expense_transaction">Expense transaction</string>
    <string name="transfer_transaction">Transfers</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="_100">100</string>
    <string name="czk">CZK</string>
    <string name="_100_percent">100%</string>
    <string name="_100_czk">100 CZK</string>
    <string name="_0">0</string>
    <string name="date_example">23.3.2023</string>
    <string name="monthly">Monthly</string>
    <string name="round_the_numbers">Round the numbers?</string>
    <string name="summary_off">off</string>
    <string name="summary_on">on</string>
    <string name="date_format">Date format</string>
    <string name="date_format_list">Date formats</string>
    <string name="click_on_plus_button">No transactions yet! Tap + to start adding</string>
    <string name="click_on_plus_butto_transfer">No transfer yet! Tap + to start adding</string>
    <string name="descrition">The application was developed as part of a semester\'s work</string>
    <string name="author">Kachmasheva Anna</string>
    <string name="author_label">"Author: "</string>
</resources>