<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/format_number"
            android:summaryOff="@string/summary_off"
            android:summaryOn="@string/summary_on"
            android:title="@string/round_the_numbers"
            app:icon="@drawable/ic_coins" />

        <ListPreference
            app:key="@string/date_format"
            app:title="@string/date_format"
            app:summary="%s"
            app:icon="@drawable/ic_regular_payments"
            app:entries="@array/formats"
            android:entryValues="@array/formats"
            android:defaultValue="0"
            app:dialogTitle="@string/date_format_list"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/reminders"
            android:title="@string/reminders"
            app:icon="@drawable/ic_notification" />

    </PreferenceCategory>

</PreferenceScreen>