<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moneymanager.ui.home.TransferFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textLabelForAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/amount"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textAccount"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:text="@string/_100" />

            <TextView
                android:id="@+id/textLabelForType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textType"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:text="@string/income" />


            <TextView
                android:id="@+id/textLabelForToAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textAmount"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:text="@string/name" />

            <TextView
                android:id="@+id/textLabelForPaymentCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/category"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iconCategory"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/text_margin_16"
                    android:contentDescription="@string/icon_category"
                    android:src="@drawable/ic_delete" />

                <TextView
                    android:id="@+id/textPaymentCategoryName"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_16"
                    android:text="@string/menu_home" />

            </LinearLayout>

            <TextView
                android:id="@+id/textLabelForDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textDate"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:text="@string/date_example" />

            <TextView
                android:id="@+id/textLabelForNode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/note"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textNote"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:text="@string/note" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>