<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardMaxElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <GridLayout
        android:id="@+id/dateCardEI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:padding="@dimen/text_margin_16">

        <ImageView
            android:id="@+id/iconCategoryEI"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/nameCategoryEI"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/category"
            android:textAlignment="center"
            android:layout_columnWeight="@integer/material_motion_duration_long_1"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/percentEI"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/_100_percent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_columnWeight="@integer/material_motion_duration_long_2"
            />

        <TextView
            android:id="@+id/amountEI"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/_100"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/currencyEI"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/czk"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </GridLayout>
</androidx.cardview.widget.CardView>