<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moneymanager.ui.accounts.AccountFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textLabelForAccountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textAccountName"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:text="@string/name" />


            <TextView
                android:id="@+id/textLabelForAccountAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/total"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textAccountAmount"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:text="@string/_100_czk" />


            <TextView
                android:id="@+id/textLabelForIncomeTransaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/income_transaction"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textPaymentIncomeTransaction"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:text="@string/_0" />


            <TextView
                android:id="@+id/textLabelForExpenseTransaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/expense_transaction"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textPaymentExpenseTransaction"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/textLabelForTransferTransaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:layout_marginTop="@dimen/text_margin_40"
                android:text="@string/transfer_transaction"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textPaymentTransferTransaction"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_16"
                android:text="@string/_0" />

        </LinearLayout>

</androidx.core.widget.NestedScrollView>

    </FrameLayout>