<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moneymanager.ui.home.TransfersFragment">

    <FrameLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/transfersAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_16"
            android:layout_marginBottom="@dimen/text_margin_16"
            android:text="@string/_100_czk"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transfersList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            tools:listitem="@layout/transfer_list_item" />

        <TextView
            android:id="@+id/add_transfer_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginBottom="100dp"
            android:text="@string/click_on_plus_butto_transfer"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="24sp" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="540dp"
            android:contentDescription="@string/submit"
            android:src="@drawable/ic_plus_40" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>