<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/text_margin_16"
    tools:context="com.example.moneymanager.ui.currency.SelectDefaultCurrencyFragment">

    <TextView
        android:id="@+id/selectCurrency"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center|top"
        android:layout_margin="@dimen/text_margin_40"
        android:text="@string/select_default_currency"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/selectCurrency"
        android:layout_gravity="center|top"
        android:layout_marginTop="90dp"
        android:hint="@string/search"
        android:paddingLeft="@dimen/text_margin_16"
        android:paddingRight="@dimen/text_margin_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currenciesList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/fragment_currency_list_item"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        app:icon="@drawable/baseline_arrow_forward_24"
        app:iconGravity="textEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/text_margin_16"
        android:layout_marginLeft="@dimen/text_margin_16"
        android:layout_centerInParent="true"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:paddingStart="50dp"
        android:paddingTop="14dp"
        android:paddingEnd="40dp"
        android:paddingBottom="14dp"
        android:text="@string/next"
        android:textSize="18sp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>